--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/deKilla/anchart3d.git"
+    "url": "https://github.com/deKilla/anchart3d.git"
   },
   "keywords": [
     "charts",
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/deKilla/anchart3d/issues"
   },
-  "homepage": "https://github.com/deKilla/anchart3d#readme"
+  "homepage": "https://github.com/deKilla/anchart3d#readme",
+  "dependencies": {
+    "three": "^0.82.1"
+  }
 }
