--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "example": "examples",
     "test": "test"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/deKilla/anchart3d.git"
@@ -28,5 +26,13 @@
   "homepage": "https://github.com/deKilla/anchart3d#readme",
   "dependencies": {
     "three": "^0.82.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
