--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "webpack --config webpack.config.babel.js"
+    "start": "webpack --progress --colors --watch"
   },
   "repository": {
     "type": "git",
@@ -33,12 +33,7 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babelify": "^7.3.0",
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "expose-loader": "^0.7.1",
     "webpack": "^1.13.3"
   }
 }
