--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "three": "^0.82.1"
   },
   "devDependencies": {
+    "tween": "^16.3.5",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
