--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "webpack --progress --colors --watch"
+    "start": "webpack --progress --colors --watch",
+    "minify": "webpack && uglifyjs ./build/anchart3d.js -c -m -o ./build/anchart3d.min.js --source-map ./build/anchart3d.min.js.map"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,6 @@
     "url": "https://github.com/deKilla/anchart3d/issues"
   },
   "homepage": "https://github.com/deKilla/anchart3d#readme",
-
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
@@ -34,6 +34,7 @@
     "expose-loader": "^0.7.1",
     "three": "^0.82.1",
     "tween.js": "^16.3.5",
+    "uglify-js": "^2.7.5",
     "webpack": "^1.13.3"
   }
 }
